Adicionando estilos nav-bar e banner

--- a/index.html
+++ b/index.html
@@ -34,21 +34,17 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main">
       <section class="banner">
-        <div class="row">
-          <div class="column">
-            <h1 class="main-title">I`m Ellen Coelho</h1>
+        <div id="chevron"></div>
+        <div class="banner-title">
+          <div class="col-md-6">
+            <h1 class="title">I`m Ellen Coelho</h1>
             <h2 class="subtitle">a developer in progress</h2>
-            <br />
-            <img src="./assets/header/myPhoto.svg" alt="Perfil" />
           </div>
-          <div class="column">
-            <img
-              src="./assets/header/developer_img.svg"
-              alt="Woman developer"
-            />
-          </div>
+        </div>
+        <div class="profile-view">
+          <img class="profile" src="./assets/banner/profile.jpg" alt="Perfil" />
         </div>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur cum
